--- a/site/frontend/index.html
+++ b/site/frontend/index.html
@@ -79,7 +79,8 @@
             </div>
         </div>
     </header>
-    <div id="map"></div>
+
+    <div style="width:100%; height:100%" id="map"></div>
 
     <script src="index.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
