--- a/site/frontend/Map/index.html
+++ b/site/frontend/Map/index.html
@@ -17,7 +17,7 @@
         <a href="#" class="navbar-brand"></a>
         <ul class="nav">
             <li class="nav-item">
-                <a class="nav-link" href="#">Accueil</a>
+                <a class="nav-link" href="../Homepage/index.html">Accueil</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Page 1</a>
