Affichage des marqueurs de toutes les centrales

--- a/site/frontend/Map/index.html
+++ b/site/frontend/Map/index.html
@@ -54,6 +54,7 @@
                         <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
                 </div>
+                <input type="file" id="csvfile" accept=".csv">
             </div>
         </div>
     </div>
