--- a/site/frontend/Map/map.html
+++ b/site/frontend/Map/map.html
@@ -47,15 +47,15 @@
                 </div>
             </div>
             <div class="col-3">
+                <input type="file" id="csvfile" accept=".csv">
                 <div class="card" style="width: 18rem;">
                     <img src="..." class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <p class="card-text" id="card-content">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                         <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
                 </div>
-                <input type="file" id="csvfile" accept=".csv">
             </div>
         </div>
     </div>
