--- a/site/frontend/LaissezMoi/index.html
+++ b/site/frontend/LaissezMoi/index.html
@@ -20,13 +20,22 @@
         </nav>
     </header>
     <section class="accueil">
-            <img src="power_plant_hydro.png">
-            <img src="power_plant_nuclear.png".png">
+            <img src="background.jpg" alt="">
+            <img src="power_plant_hydro.png" class="img_hydro" alt="">
+            <img src="power_plant_nuclear.png" class="img_nuclear" alt="">
+            <div class="info">
+                <h2 class="titre">Data Explorable</h2>
+                <p class="paragraphe">Le principe de ce projet est de Choisir une source de données accessible (open data, data crawling, etc), de collecter ces données, les analyser, et construire un “explorable” permettant à n'importe qui d'explorer ces données de manière interactive, typiquement sous la forme d'un site web. </p>
+                <a href="http://cazabetremy.fr/wiki/doku.php?id=projet:sujets" class="btn">Lire Plus</a>
+            </div>
+    </section>
+    <section class="content">
+        <div class="d-flex flex-row justify-content-around">
             <div class="card" style="width: 18rem;">
                 <img class="card-img-top" src="../../../data/carte.jpg" href="../Map/map.html" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">Centrales nucléaires</h5>
-                    <p class="card-text">Retrouvez la répartition des centrales électriques dans le monde.</p>
+                    <p class="card-text">Retrouvez la répartition des centrales nucléaires dans le monde.</p>
                 </div>
             </div>
             <div class="card" style="width: 18rem;">
@@ -45,7 +54,20 @@
                     <a href="#" class="btn btn-primary">Acceder a la page</a>
                 </div>
             </div>
+        </div>
     </section>
-    
+    <script type="text/javascript">
+        const hydro = document.querySelector(".img_hydro");
+        const nuclear = document.querySelector(".img_nuclear");
+        const nav = document.querySelector("nav");
+        const logo = document.querySelector(".logo");
+
+        window.addEventListener("load", ()=>{
+            hydro.style.transform = "translateX(0)";
+            nuclear.style.transform = "translateX(0)";
+            nav.style.transform = "translateX(0)";
+            logo.style.transform = "translateX(0)";
+        })
+    </script>
 </body>
 </html>
