--- a/site/frontend/LaissezMoi/index.html
+++ b/site/frontend/LaissezMoi/index.html
@@ -13,10 +13,9 @@
         <a href="#" class="logo">Logo</a>
         <nav>
             <a href="#">Accueil</a>
-            <a href="#">Explorer</a>
-            <a href="#">A propos</a>
-            <a href="#">Plus</a>
-            <a href="#">Tom le BG</a>
+            <a href="../Map/map.html">Carte</a>
+            <a href="../Energymix/energymix.html">Mix Energétique</a>
+            <a href="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fanotherwhiskyformisterbukowski.com%2Fwp-content%2Fuploads%2F2016%2F01%2Fnon.jpg&f=1&nofb=1">A Propos</a>
         </nav>
     </header>
     <section class="accueil">
