--- a/site/frontend/LaissezMoi/index.html
+++ b/site/frontend/LaissezMoi/index.html
@@ -5,14 +5,12 @@
     <meta charset="utf-8">
     <title>Test leaflet</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
-        <a href="#" class="logo">Logo</a>
+        <a href="#" class="logo">RC1</a>
         <nav>
-            <a href="#">Accueil</a>
+            <a href="../LaissezMoi/index.html">Accueil</a>
             <a href="../Map/map.html">Carte</a>
             <a href="../Energymix/energymix.html">Mix Energétique</a>
             <a href="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fanotherwhiskyformisterbukowski.com%2Fwp-content%2Fuploads%2F2016%2F01%2Fnon.jpg&f=1&nofb=1">A Propos</a>
@@ -29,29 +27,25 @@
             </div>
     </section>
     <section class="content">
-        <div class="d-flex flex-row justify-content-around">
-            <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="../../../data/carte.jpg" href="../Map/map.html" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title">Centrales nucléaires</h5>
-                    <p class="card-text">Retrouvez la répartition des centrales nucléaires dans le monde.</p>
-                </div>
+        <div class="card">
+            <img class="card-img-top" src="../../../data/carte.jpg" href="../Map/map.html" alt="">
+            <div class="card-body">
+                <h5 class="card-title">Centrales nucléaires</h5>
+                <p class="card-text">Retrouvez la répartition des centrales nucléaires dans le monde.</p>
             </div>
-            <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="..." alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title">Répartition énergétique en France</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Acceder a la page</a>
-                </div>
+        </div>
+        <div class="card">
+            <img class="card-img-top" src="..." alt="">
+            <div class="card-body">
+                <h5 class="card-title">Répartition énergétique en France</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
-            <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="../../../data/linky.jpg" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title">Consulter sa consommation</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary">Acceder a la page</a>
-                </div>
+        </div>
+        <div class="card">
+            <img class="card-img-top" src="../../../data/linky.jpg" alt="">
+            <div class="card-body">
+                <h5 class="card-title">Consulter sa consommation</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
         </div>
     </section>
@@ -60,12 +54,21 @@
         const nuclear = document.querySelector(".img_nuclear");
         const nav = document.querySelector("nav");
         const logo = document.querySelector(".logo");
+        const info = document.querySelector(".info")
 
         window.addEventListener("load", ()=>{
             hydro.style.transform = "translateX(0)";
             nuclear.style.transform = "translateX(0)";
-            nav.style.transform = "translateX(0)";
-            logo.style.transform = "translateX(0)";
+            nav.style.transform = "translateY(0)";
+            logo.style.transform = "translateY(0)";
+        })
+
+        window.addEventListener("scroll",()=>{
+            const scrollVal = window.scrollY;
+
+            hydro.style.left = scrollVal * -0.25 + "px"
+            nuclear.style.right = scrollVal * -0.25 + "px"
+            info.style.marginTop = scrollVal * 0.5 + "px"           
         })
     </script>
 </body>
