json and front fix

--- a/site/frontend/Energymix/energymix.html
+++ b/site/frontend/Energymix/energymix.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <a href="#" class="logo">RC1</a>
+        <a href="../LaissezMoi/index.html" class="logo">RC1</a>
         <nav>
             <a href="../LaissezMoi/index.html">Accueil</a>
             <a href="../Map/map.html">Carte</a>
