--- a/site/frontend/LaissezMoi/index.html
+++ b/site/frontend/LaissezMoi/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <header>
-        <a href="#" class="logo">RC1</a>
+        <a href="../LaissezMoi/index.html" class="logo">RC1</a>
         <nav>
             <a href="../LaissezMoi/index.html">Accueil</a>
             <a href="../Map/map.html">Carte</a>
             <a href="../Energymix/energymix.html">Mix Energétique</a>
-            <a href="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fanotherwhiskyformisterbukowski.com%2Fwp-content%2Fuploads%2F2016%2F01%2Fnon.jpg&f=1&nofb=1">A Propos</a>
+            <a href="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.imgur.com%2FOvMZBs9.jpg&f=1&nofb=1">A Propos</a>
         </nav>
     </header>
     <section class="accueil">
@@ -27,27 +27,27 @@
             </div>
     </section>
     <section class="content">
-        <div class="card">
-            <img class="card-img-top" src="../../../data/carte.jpg" href="../Map/map.html" alt="">
+        <a class="card" href="../Map/map.html">
+            <img class="card-img-top" src="../../../data/carte2.jpg" alt="">
             <div class="card-body">
                 <h5 class="card-title">Centrales nucléaires</h5>
-                <p class="card-text">Retrouvez la répartition des centrales nucléaires dans le monde.</p>
+                <p class="card-text">Retrouvez la répartition des centrales électriques dans le monde.</p>
             </div>
-        </div>
-        <div class="card">
-            <img class="card-img-top" src="..." alt="">
+        </a>
+        <a class="card" href="../Energymix/energymix.html">
+            <img class="card-img-top" src="../../../data/stat.jpg" alt="">
             <div class="card-body">
-                <h5 class="card-title">Répartition énergétique en France</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <h5 class="card-title">Données Françaises</h5>
+                <p class="card-text">Retrouvez toutes les productions énérgetiques de la France</p>
             </div>
-        </div>
-        <div class="card">
-            <img class="card-img-top" src="../../../data/linky.jpg" alt="">
+        </a>
+        <a class="card" href="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.imgur.com%2FOvMZBs9.jpg&f=1&nofb=1">
+            <img class="card-img-top" src="../../../data/linky2.jpg" alt="">
             <div class="card-body">
-                <h5 class="card-title">Consulter sa consommation</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <h5 class="card-title">Ma consommation</h5>
+                <p class="card-text">Consultez votre consomation a l'aide de votre compteur Linky </p>
             </div>
-        </div>
+        </a>
     </section>
     <script type="text/javascript">
         const hydro = document.querySelector(".img_hydro");
