même style de header partout

--- a/site/frontend/Energymix/energymix.html
+++ b/site/frontend/Energymix/energymix.html
@@ -24,40 +24,44 @@
         <h1>Production d'électricité francaise en temps réel</h1>
         <!--PRODUCTION-->
         <div class="data-container">
-            <div id="container-production">
-                <div class="prod">
-                     <img src="./energyLogo.png">
-                     <div class="prod-text">
-                         <span class="prod-nom">Nucléaire</span>
-                         <div class="prod-prod">
-                             <span>35235</span>
-                             <span>Mw</span>
-                         </div>
-                     </div>
+            <div class="production">
+                <div id="container-production">
+                    <div class="prod">
+                        <img src="./energyLogo.png">
+                        <div class="prod-text">
+                            <span class="prod-nom">Nucléaire</span>
+                            <div class="prod-prod">
+                                <span>35235</span>
+                                <span>Mw</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="prod">
+                        <img src="./energyLogo.png">
+                        <div class="prod-text">
+                            <span class="prod-nom">Charbon</span>
+                            <div class="prod-prod">
+                                <span>1659</span>
+                                <span>Mw</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="prod">
+                        <img src="./energyLogo.png">
+                        <div class="prod-text">
+                            <span class="prod-nom">Gaz</span>
+                            <div class="prod-prod">
+                                <span>128</span>
+                                <span>Mw</span>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="prod">
-                     <img src="./energyLogo.png">
-                     <div class="prod-text">
-                         <span class="prod-nom">Charbon</span>
-                         <div class="prod-prod">
-                             <span>1659</span>
-                             <span>Mw</span>
-                         </div>
-                     </div>
-                 </div>
-                 <div class="prod">
-                     <img src="./energyLogo.png">
-                     <div class="prod-text">
-                         <span class="prod-nom">Gaz</span>
-                         <div class="prod-prod">
-                             <span>128</span>
-                             <span>Mw</span>
-                         </div>
-                     </div>
-                 </div>
-             </div>
-             <!--POURCENTAGE-->
-             <div id="container-pourcentage">
+                <img src="../../../data/piechartexemple.jpg">
+            </div>
+            <!-- <img src="../../../data/piechartexemple.jpg"> -->
+            <!--POURCENTAGE-->
+            <div id="container-pourcentage">
                  <div class="pourcen">
                      <span class="pourcen-nom">Nucléaire</span>
                      <div class="pourcen-pourcen">
@@ -79,7 +83,7 @@
                          <span>%</span>
                      </div>
                 </div> 
-             </div>
+            </div>
         </div>
     </section>
     
