--- a/site/frontend/LaissezMoi/index.html
+++ b/site/frontend/LaissezMoi/index.html
@@ -26,6 +26,12 @@
                 <a href="http://cazabetremy.fr/wiki/doku.php?id=projet:sujets" class="btn">Lire Plus</a>
             </div>
     </section>
+    <div class="custom-shape-divider-bottom-1648301297">
+        <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+            <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="shape-fill"></path>
+        </svg>
+    </div>
+    <!-- CONTENU DE LA PAGE -->
     <section class="content">
         <a class="card" href="../Map/map.html">
             <img class="card-img-top" src="../../../data/carte2.jpg" alt="">
@@ -49,6 +55,36 @@
             </div>
         </a>
     </section>
+
+      <!--FOOTER-->
+      <footer>          
+            <section class="apropos">
+              <h6>A Propos</h6>
+              <p>Le principe de ce projet est de Choisir une source de données accessible (open data, data crawling, etc), de collecter ces données, les analyser, et construire un “explorable” permettant à n'importe qui d'explorer ces données de manière interactive, typiquement sous la forme d'un site web. </p>
+            </section>
+  
+            <section class="footer-links"> 
+              <h6>Données</h6>
+              <ul>
+                <li><a href="https://www.rte-france.com/">Rte France</a></li>
+                <li><a href="#">Ressousrce Watch</a></li>
+                <li><a href="#">JSP</a></li>
+                <li><a href="#">JSP</a></li>
+              </ul>
+            </section>
+  
+            <section class="footer-links">
+              <h6>Liens</h6>
+              <ul>
+                <li><a href="https://forge.univ-lyon1.fr/p2110727/lifprojet">Git</a></li>
+                <li><a href="https://leafletjs.com/SlavaUkraini/">Leaflet</a></li>
+                <li><a href="https://beautiful-soup-4.readthedocs.io/en/latest/#">Beautifull Soup</a></li>
+                <li><a href="https://github.com/guillaumezin/DomoticzLinky">Linky API</a></li>
+              </ul>
+            </section>
+  </footer>
+    
+
     <script type="text/javascript">
         const hydro = document.querySelector(".img_hydro");
         const nuclear = document.querySelector(".img_nuclear");
