--- a/site/frontend/Map/map.html
+++ b/site/frontend/Map/map.html
@@ -14,50 +14,41 @@
     <script src="https://unpkg.com/leaflet.markercluster/dist/leaflet.markercluster.js"></script>
 </head>
 
-<body class="container-fluid p-0 m-0">
-    <div class="navbar navbar-expand bg-light">
-        <a href="#" class="navbar-brand"></a>
-        <ul class="nav">
-            <li class="nav-item">
-                <a class="nav-link" href="../Homepage/index.html">Accueil</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Page 1</a>
-            </li>
-            <li class="nav-item">
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Dropdown</a>
-                <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#scrollspyHeading3">Third</a></li>
-                    <li><a class="dropdown-item" href="#scrollspyHeading4">Fourth</a></li>
-                    <li>
-                        <hr class="dropdown-divider">
-                    </li>
-                    <li><a class="dropdown-item" href="#scrollspyHeading5">Fifth</a></li>
-                </ul>
-            </li>
-            </li>
-        </ul>
-    </div>
+<body>
+    <header>
+        <a href="../LaissezMoi/index.html" class="logo">RC1</a>
+        <nav>
+            <a href="../LaissezMoi/index.html">Accueil</a>
+            <a href="../Map/map.html">Carte</a>
+            <a href="../Energymix/energymix.html">Mix Energétique</a>
+            <a href="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fanotherwhiskyformisterbukowski.com%2Fwp-content%2Fuploads%2F2016%2F01%2Fnon.jpg&f=1&nofb=1">A Propos</a>
+        </nav>
+    </header>
 
-    <div class="container-fluid p-0">
-        <div class="row justify-content-start">
-            <div class="col-9">
-                <div id="map-container" class="p-0">
-                    <div id="map" class=""></div>
-                </div>
-            </div>
-            <div class="col-3">
+    <section class="contenu_page">   
+            <div id="map-container">
+                <div id="map" class=""></div>
+            </div> 
+            <div class="interaction-container">
                 <input type="file" id="csvfile" accept=".csv">
-                <div class="card" style="width: 18rem;">
+                <div class="card">
                     <div class="card-body">
                         <p class="card-text" id="card-content">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
+    </section>
+    
+    <script type="text/javascript">
+        const nav = document.querySelector("nav");
+        const logo = document.querySelector(".logo");
+        
+        window.addEventListener("load", ()=>{
+            nav.style.transform = "translateY(0)";
+            logo.style.transform = "translateY(0)";
+        })
 
+    </script>
     <script src="index.js"></script>
 </body>
 
