--- a/site/frontend/Energymix/energymix.html
+++ b/site/frontend/Energymix/energymix.html
@@ -10,9 +10,9 @@
 
 <body>
     <header>
-        <a href="../LaissezMoi/index.html" class="logo">RC1</a>
+        <a href="../Accueil/index.html" class="logo">RC1</a>
         <nav>
-            <a href="../LaissezMoi/index.html">Accueil</a>
+            <a href="../Accueil/index.html">Accueil</a>
             <a href="../Map/map.html">Carte</a>
             <a href="../Energymix/energymix.html">Mix Energétique</a>
             <a href="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fanotherwhiskyformisterbukowski.com%2Fwp-content%2Fuploads%2F2016%2F01%2Fnon.jpg&f=1&nofb=1">A Propos</a>
@@ -26,36 +26,7 @@
         <div class="data-container">
             <div class="production">
                 <div id="container-production">
-                    <div class="prod">
-                        <img src="./energyLogo.png">
-                        <div class="prod-text">
-                            <span class="prod-nom">Nucléaire</span>
-                            <div class="prod-prod">
-                                <span>35235</span>
-                                <span>Mw</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="prod">
-                        <img src="./energyLogo.png">
-                        <div class="prod-text">
-                            <span class="prod-nom">Charbon</span>
-                            <div class="prod-prod">
-                                <span>1659</span>
-                                <span>Mw</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="prod">
-                        <img src="./energyLogo.png">
-                        <div class="prod-text">
-                            <span class="prod-nom">Gaz</span>
-                            <div class="prod-prod">
-                                <span>128</span>
-                                <span>Mw</span>
-                            </div>
-                        </div>
-                    </div>
+                    
                 </div>
                 <img src="../../../data/piechartexemple.jpg">
             </div>
