--- a/site/frontend/Map/map.html
+++ b/site/frontend/Map/map.html
@@ -16,9 +16,9 @@
 
 <body>
     <header>
-        <a href="../LaissezMoi/index.html" class="logo">RC1</a>
+        <a href="../Accueil/index.html" class="logo">RC1</a>
         <nav>
-            <a href="../LaissezMoi/index.html">Accueil</a>
+            <a href="../Accueil/index.html">Accueil</a>
             <a href="../Map/map.html">Carte</a>
             <a href="../Energymix/energymix.html">Mix Energétique</a>
             <a href="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fanotherwhiskyformisterbukowski.com%2Fwp-content%2Fuploads%2F2016%2F01%2Fnon.jpg&f=1&nofb=1">A Propos</a>
