--- a/site/frontend/Accueil/index.html
+++ b/site/frontend/Accueil/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <header>
-        <a href="../LaissezMoi/index.html" class="logo">RC1</a>
+        <a href="../Accueil/index.html" class="logo">RC1</a>
         <nav>
-            <a href="../LaissezMoi/index.html">Accueil</a>
+            <a href="../Accueil/index.html">Accueil</a>
             <a href="../Map/map.html">Carte</a>
             <a href="../Energymix/energymix.html">Mix Energétique</a>
             <a href="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.imgur.com%2FOvMZBs9.jpg&f=1&nofb=1">A Propos</a>
