--- a/site/frontend/Accueil/accueil.html
+++ b/site/frontend/Accueil/accueil.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="utf-8">
     <title>Test leaflet</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="accueil.css">
 </head>
 <body>
     <header>
-        <a href="../Accueil/index.html" class="logo">RC1</a>
+        <a href="../Accueil/accueil.html" class="logo">RC1</a>
         <nav>
-            <a href="../Accueil/index.html">Accueil</a>
+            <a href="../Accueil/accueil.html">Accueil</a>
             <a href="../Map/map.html">Carte</a>
             <a href="../Energymix/energymix.html">Mix Energétique</a>
             <a href="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.imgur.com%2FOvMZBs9.jpg&f=1&nofb=1">A Propos</a>
