--- a/site/frontend/Map/map.html
+++ b/site/frontend/Map/map.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8">
     <title>Test leaflet</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="map.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin="" />
@@ -16,9 +17,9 @@
 
 <body>
     <header>
-        <a href="../Accueil/index.html" class="logo">RC1</a>
+        <a href="../Accueil/accueil.html" class="logo">RC1</a>
         <nav>
-            <a href="../Accueil/index.html">Accueil</a>
+            <a href="../Accueil/accueil.html">Accueil</a>
             <a href="../Map/map.html">Carte</a>
             <a href="../Energymix/energymix.html">Mix Energétique</a>
             <a href="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fanotherwhiskyformisterbukowski.com%2Fwp-content%2Fuploads%2F2016%2F01%2Fnon.jpg&f=1&nofb=1">A Propos</a>
