--- a/site/frontend/Accueil/accueil.html
+++ b/site/frontend/Accueil/accueil.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Test leaflet</title>
+    <title>Data Explorable</title>
+    <link rel="icon" href="../../../data/nuclearIcon.png">
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="accueil.css">
 </head>
