--- a/site/frontend/Energymix/energymix.html
+++ b/site/frontend/Energymix/energymix.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Test leaflet</title>
+    <title>Mix Energétique</title>
+    <link rel="icon" href="../../../data/nuclearIcon.png">
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="energymix.css">
     <script src="script.js"></script>
