--- a/site/frontend/Map/map.html
+++ b/site/frontend/Map/map.html
@@ -27,24 +27,21 @@
         </nav>
     </header>
 
-    <section class="contenu_page">   
+    <section class="contenu_page">
             <div id="map-container">
                 <div id="map" class=""></div>
-            </div> 
+            </div>
             <div class="interaction-container">
-                <input type="file" id="csvfile" accept=".csv">
-                <div class="card">
-                    <div class="card-body">
-                        <p class="card-text" id="card-content">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
+                <div id="infos-centrale">
+                    <input type="file" id="csvfile" accept=".csv">
                 </div>
             </div>
     </section>
-    
+
     <script type="text/javascript">
         const nav = document.querySelector("nav");
         const logo = document.querySelector(".logo");
-        
+
         window.addEventListener("load", ()=>{
             nav.style.transform = "translateY(0)";
             logo.style.transform = "translateY(0)";
