--- a/site/frontend/Accueil/accueil.html
+++ b/site/frontend/Accueil/accueil.html
@@ -15,6 +15,8 @@
             <a href="../Accueil/accueil.html">Accueil</a>
             <a href="../Map/map.html">Carte</a>
             <a href="../Energymix/energymix.html">Mix Energétique</a>
+            <a href="../Stats/stats.html">Statistiques</a>
+            <a href="../Linky/linky.html">Linky</a>
             <a href="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.imgur.com%2FOvMZBs9.jpg&f=1&nofb=1">A Propos</a>
         </nav>
     </header>
@@ -49,11 +51,18 @@
                 <p class="card-text">Retrouvez toutes les productions énérgetiques de la France</p>
             </div>
         </a>
-        <a class="card" href="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.imgur.com%2FOvMZBs9.jpg&f=1&nofb=1">
+        <a class="card" href="../Linky/linky.html">
             <img class="card-img-top" src="../../../data/linky2.jpg" alt="">
             <div class="card-body">
                 <h5 class="card-title">Ma consommation</h5>
                 <p class="card-text">Consultez votre consomation a l'aide de votre compteur Linky </p>
+            </div>
+        </a>
+        <a class="card" href="../Stats/stats.html">
+            <img class="card-img-top" src="../../../data/stat2.jpg" alt="">
+            <div class="card-body">
+                <h5 class="card-title">Statistiques</h5>
+                <p class="card-text">Consultez les statistiques de production éléctridddque </p>
             </div>
         </a>
     </section>
