--- a/site/frontend/Linky/linky.html
+++ b/site/frontend/Linky/linky.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Linky</title>
+    <link rel="icon" href="../../../data/nuclearIcon.png">
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="./linky.css">
 </head>
