--- a/site/frontend/Map/map.html
+++ b/site/frontend/Map/map.html
@@ -7,8 +7,6 @@
     <link rel="icon" href="../../../data/nuclearIcon.png">
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="map.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin="" />
     <script src="https://unpkg.com/leaflet/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
     <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster/dist/MarkerCluster.css">
@@ -23,6 +21,8 @@
             <a href="../Accueil/accueil.html">Accueil</a>
             <a href="../Map/map.html">Carte</a>
             <a href="../Energymix/energymix.html">Mix Energétique</a>
+            <a href="../Stats/stats.html">Statistiques</a>
+            <a href="../Linky/linky.html">Linky</a>
             <a href="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fanotherwhiskyformisterbukowski.com%2Fwp-content%2Fuploads%2F2016%2F01%2Fnon.jpg&f=1&nofb=1">A Propos</a>
         </nav>
     </header>
