--- a/site/frontend/Stats/stats.html
+++ b/site/frontend/Stats/stats.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Stat</title>
+    <title>Statistiques</title>
+    <link rel="icon" href="../../../data/nuclearIcon.png">
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="./stats.css">
 
