modified /frontend to work with server

--- a/site/frontend/Accueil/accueil.html
+++ b/site/frontend/Accueil/accueil.html
@@ -4,24 +4,25 @@
 <head>
     <meta charset="utf-8">
     <title>Data Explorable</title>
-    <link rel="icon" href="../../../data/nuclearIcon.png">
-    <link rel="stylesheet" href="../style.css">
-    <link rel="stylesheet" href="accueil.css">
+    <link rel="icon" href="/img/nuclearIcon.png">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/accueil.css">
 </head>
 <body>
     <header>
-        <a href="../Accueil/accueil.html" class="logo">RC1</a>
+        <a href="../accueil" class="logo">RC1</a>
         <nav>
-            <a href="../Accueil/accueil.html">Accueil</a>
-            <a href="../Map/map.html">Carte</a>
-            <a href="../Energymix/energymix.html">Mix Energétique</a>
+            <a href="../accueil">Accueil</a>
+            <a href="../map">Carte</a>
+            <a href="../energymix">Mix Energétique</a>
+            <a href="../linky">Consommation Electrique</a>
             <a href="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.imgur.com%2FOvMZBs9.jpg&f=1&nofb=1">A Propos</a>
         </nav>
     </header>
     <section class="accueil">
-            <img src="background.jpg" alt="">
-            <img src="power_plant_hydro.png" class="img_hydro" alt="">
-            <img src="power_plant_nuclear.png" class="img_nuclear" alt="">
+            <img src="/img/background.jpg" alt="">
+            <img src="/img/power_plant_hydro.png" class="img_hydro" alt="">
+            <img src="/img/power_plant_nuclear.png" class="img_nuclear" alt="">
             <div class="info">
                 <h2 class="titre">Data Explorable</h2>
                 <p class="paragraphe">Le principe de ce projet est de Choisir une source de données accessible (open data, data crawling, etc), de collecter ces données, les analyser, et construire un “explorable” permettant à n'importe qui d'explorer ces données de manière interactive, typiquement sous la forme d'un site web. </p>
@@ -36,21 +37,21 @@
     <!-- CONTENU DE LA PAGE -->
     <section class="content">
         <a class="card" href="../Map/map.html">
-            <img class="card-img-top" src="../../../data/carte2.jpg" alt="">
+            <img class="card-img-top" src="/img/carte2.jpg" alt="">
             <div class="card-body">
                 <h5 class="card-title">Centrales nucléaires</h5>
                 <p class="card-text">Retrouvez la répartition des centrales électriques dans le monde.</p>
             </div>
         </a>
         <a class="card" href="../Energymix/energymix.html">
-            <img class="card-img-top" src="../../../data/stat.jpg" alt="">
+            <img class="card-img-top" src="/img/stat.jpg" alt="">
             <div class="card-body">
                 <h5 class="card-title">Données Françaises</h5>
                 <p class="card-text">Retrouvez toutes les productions énérgetiques de la France</p>
             </div>
         </a>
         <a class="card" href="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.imgur.com%2FOvMZBs9.jpg&f=1&nofb=1">
-            <img class="card-img-top" src="../../../data/linky2.jpg" alt="">
+            <img class="card-img-top" src="/img/linky.jpg" alt="">
             <div class="card-body">
                 <h5 class="card-title">Ma consommation</h5>
                 <p class="card-text">Consultez votre consomation a l'aide de votre compteur Linky </p>
