modified /frontend to work with server

--- a/site/frontend/Accueil/accueil.html
+++ b/site/frontend/Accueil/accueil.html
@@ -10,12 +10,13 @@
 </head>
 <body>
     <header>
-        <a href="../accueil" class="logo">RC1</a>
+        <a href="accueil" class="logo">RC1</a>
         <nav>
-            <a href="../accueil">Accueil</a>
-            <a href="../map">Carte</a>
-            <a href="../energymix">Mix Energétique</a>
-            <a href="../linky">Consommation Electrique</a>
+            <a href="accueil">Accueil</a>
+            <a href="map">Carte</a>
+            <a href="energymix">Mix Energétique</a>
+            <a href="stats">Statistiques</a>
+            <a href="linky">Consommation Electrique</a>
             <a href="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.imgur.com%2FOvMZBs9.jpg&f=1&nofb=1">A Propos</a>
         </nav>
     </header>
@@ -36,21 +37,28 @@
     </div>
     <!-- CONTENU DE LA PAGE -->
     <section class="content">
-        <a class="card" href="../Map/map.html">
+        <a class="card" href="map">
             <img class="card-img-top" src="/img/carte2.jpg" alt="">
             <div class="card-body">
                 <h5 class="card-title">Centrales nucléaires</h5>
                 <p class="card-text">Retrouvez la répartition des centrales électriques dans le monde.</p>
             </div>
         </a>
-        <a class="card" href="../Energymix/energymix.html">
+        <a class="card" href="energymix">
             <img class="card-img-top" src="/img/stat.jpg" alt="">
             <div class="card-body">
                 <h5 class="card-title">Données Françaises</h5>
                 <p class="card-text">Retrouvez toutes les productions énérgetiques de la France</p>
             </div>
         </a>
-        <a class="card" href="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.imgur.com%2FOvMZBs9.jpg&f=1&nofb=1">
+        <a class="card" href="stats">
+            <img class="card-img-top" src="img/stat2.jpg" alt="">
+            <div class="card-body">
+                <h5 class="card-title">Statistiques</h5>
+                <p class="card-text">Consultez les statistiques de production éléctridddque </p>
+            </div>
+        </a>
+        <a class="card" href="linky">
             <img class="card-img-top" src="/img/linky.jpg" alt="">
             <div class="card-body">
                 <h5 class="card-title">Ma consommation</h5>
@@ -82,7 +90,7 @@
                 <li><a href="https://forge.univ-lyon1.fr/p2110727/lifprojet">Git</a></li>
                 <li><a href="https://leafletjs.com/SlavaUkraini/">Leaflet</a></li>
                 <li><a href="https://beautiful-soup-4.readthedocs.io/en/latest/#">Beautifull Soup</a></li>
-                <li><a href="https://github.com/guillaumezin/DomoticzLinky">Linky API</a></li>
+                <li><a href="https://github.com/bokub/linky">Linky API</a></li>
               </ul>
             </section>
   </footer>
