--- a/site/frontend/Linky/linky.html
+++ b/site/frontend/Linky/linky.html
@@ -13,12 +13,13 @@
 
 <body>
     <header>
-        <a href="../accueil" class="logo">RC1</a>
+        <a href="accueil" class="logo">RC1</a>
         <nav>
-            <a href="../accueil">Accueil</a>
-            <a href="../map">Carte</a>
-            <a href="../energymix">Mix Energétique</a>
-            <a href="../linky">Consommation Electrique</a>
+            <a href="accueil">Accueil</a>
+            <a href="map">Carte</a>
+            <a href="energymix">Mix Energétique</a>
+            <a href="stats">Statistiques</a>
+            <a href="linky">Consommation Electrique</a>
             <a href="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.imgur.com%2FOvMZBs9.jpg&f=1&nofb=1">A Propos</a>
         </nav>
     </header>
