--- a/site/frontend/Map/map.html
+++ b/site/frontend/Map/map.html
@@ -4,13 +4,11 @@
 <head>
     <meta charset="utf-8">
     <title>Carte</title>
-    <link rel="icon" href="/img/data/nuclearIcon.png">
+    <link rel="icon" href="/img/nuclearIcon.png">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/map.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin="" />
-    <script src="https://unpkg.com/leaflet/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" integrity="" crossorigin="" />
+    <script src="https://unpkg.com/leaflet/dist/leaflet.js" integrity="" crossorigin=""></script>
     <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster/dist/MarkerCluster.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster/dist/MarkerCluster.Default.css">
     <script src="https://unpkg.com/leaflet.markercluster/dist/leaflet.markercluster.js"></script>
@@ -18,41 +16,40 @@
 
 <body>
     <header>
-        <a href="../accueil" class="logo">RC1</a>
+        <a href="accueil" class="logo">RC1</a>
         <nav>
-            <a href="../accueil">Accueil</a>
-            <a href="../map">Carte</a>
-            <a href="../energymix">Mix Energétique</a>
-            <a href="../linky">Consommation Electrique</a>
+            <a href="accueil">Accueil</a>
+            <a href="map">Carte</a>
+            <a href="energymix">Mix Energétique</a>
+            <a href="stats">Statistiques</a>
+            <a href="linky">Consommation Electrique</a>
             <a href="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.imgur.com%2FOvMZBs9.jpg&f=1&nofb=1">A Propos</a>
         </nav>
     </header>
 
-    <section class="contenu_page">   
-            <div id="map-container">
-                <div id="map" class=""></div>
-            </div> 
-            <div class="interaction-container">
+    <section class="contenu_page">
+        <div id="map-container">
+            <div id="map" class=""></div>
+        </div>
+        <div class="interaction-container">
+            <div id="infos-centrale">
                 <input type="file" id="csvfile" accept=".csv">
-                <div class="card">
-                    <div class="card-body">
-                        <p class="card-text" id="card-content">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
-                </div>
             </div>
+        </div>
+        <input type="checkbox" id="styledIcons" class="styledIcons" name="styledIcons" checked>
+        <label class="styledIcons" for="styledIcons"> Styled Icons</label><br>
     </section>
-    
+
     <script type="text/javascript">
         const nav = document.querySelector("nav");
         const logo = document.querySelector(".logo");
-        
-        window.addEventListener("load", ()=>{
+
+        window.addEventListener("load", () => {
             nav.style.transform = "translateY(0)";
             logo.style.transform = "translateY(0)";
         })
-
     </script>
-    <script src="index.js"></script>
+    <script src="/script/map.js"></script>
 </body>
 
 </html>
