--- a/site/frontend/Map/map.html
+++ b/site/frontend/Map/map.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/map.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" integrity="" crossorigin="" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-csv/0.71/jquery.csv-0.71.min.js"></script>
     <script src="https://unpkg.com/leaflet/dist/leaflet.js" integrity="" crossorigin=""></script>
     <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster/dist/MarkerCluster.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster/dist/MarkerCluster.Default.css">
@@ -41,6 +42,7 @@
     </section>
 
     <script type="text/javascript">
+        
         const nav = document.querySelector("nav");
         const logo = document.querySelector(".logo");
 
