amélioration css du formulaire

--- a/site/frontend/Accueil/accueil.html
+++ b/site/frontend/Accueil/accueil.html
@@ -45,7 +45,7 @@
             </div>
         </a>
         <a class="card" href="energymix">
-            <img class="card-img-top" src="/img/stat.jpg" alt="">
+            <img class="card-img-top" src="/img/stat1.jpg" alt="">
             <div class="card-body">
                 <h5 class="card-title">Données Françaises</h5>
                 <p class="card-text">Retrouvez toutes les productions énérgetiques de la France</p>
