trying to add image

--- a/site/frontend/Stats/stats.html
+++ b/site/frontend/Stats/stats.html
@@ -44,6 +44,9 @@
             <a href="https://plotly.com/~ahmed6c/11/?share_key=X8HrOLcfDUwWGlfKupEmHr" target="_blank" title="choropleth" style="display: block; text-align: center;"><img src="https://plotly.com/~ahmed6c/11.png?share_key=X8HrOLcfDUwWGlfKupEmHr" alt="choropleth" style="max-width: 100%;width: 600px;"  width="600" onerror="this.onerror=null;this.src='https://plotly.com/404.png';" /></a>
             <script data-plotly="ahmed6c:11" sharekey-plotly="X8HrOLcfDUwWGlfKupEmHr" src="https://plotly.com/embed.js" async></script>
         </div>
+        <div>
+            <img src="~/lifprojet/data/Statistics/kmeansclustering.png" alt="clustering"> 
+        </div>
         
     </section>
     
