add about.html page

--- a/site/frontend/Stats/stats.html
+++ b/site/frontend/Stats/stats.html
@@ -45,7 +45,7 @@
             <script data-plotly="ahmed6c:11" sharekey-plotly="X8HrOLcfDUwWGlfKupEmHr" src="https://plotly.com/embed.js" async></script>
         </div>
         <div>
-            <img src="~/lifprojet/data/Statistics/kmeansclustering.png" alt="clustering"> 
+            <img src="img/kmeansclustering.png" alt="clustering" style="max-width: 100%;width: 600px;"  width="600" onerror="this.onerror=null;this.src='https://plotly.com/404.png';" />
         </div>
         
     </section>
