added link to about

--- a/site/frontend/Stats/stats.html
+++ b/site/frontend/Stats/stats.html
@@ -19,7 +19,7 @@
             <a href="energymix">Mix Energétique</a>
             <a href="stats">Statistiques</a>
             <a href="linky">Consommation Electrique</a>
-            <a href="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.imgur.com%2FOvMZBs9.jpg&f=1&nofb=1">A Propos</a>
+            <a href="about">A Propos</a>
         </nav>
     </header>
 
