--- a/site/frontend/Map/map.html
+++ b/site/frontend/Map/map.html
@@ -34,7 +34,7 @@
         </div>
         <div class="interaction-container">
             <div id="infos-centrale">
-                <input type="file" id="csvfile" accept=".json">
+                <input type="file" id="csvfile" accept=".csv">
             </div>
         </div>
         <input type="checkbox" id="styledIcons" class="styledIcons" name="styledIcons" checked>
