small change graphs

--- a/site/frontend/Stats/stats.html
+++ b/site/frontend/Stats/stats.html
@@ -25,20 +25,25 @@
 
     <section class="contenu_page">
         <div>
-            <div id="233e83f6-c44c-4425-9cc9-241219ab49ae" class="plotly-graph-div" style="height:100%; width:100%;"></div><script src="/script/pie.js"></script>
+            <div id="233e83f6-c44c-4425-9cc9-241219ab49ae" class="plotly-graph-div" style="height:100%; width:100%;"></div>
+            <script src="/script/pie.js"></script>
         </div>
         <div>
-            <div id="da86040c-41a1-4510-9e04-2465231797ff" class="plotly-graph-div" style="height:100%; width:100%;"></div><script src="/script/hist.js"></script>
+            <div id="da86040c-41a1-4510-9e04-2465231797ff" class="plotly-graph-div" style="height:100%; width:100%;"></div>
+            <script src="/script/hist.js"></script>
         </div>
         <div>
-            <div id="c0593d70-acff-41c7-b7b3-fdef1878ebe5" class="plotly-graph-div" style="height:100%; width:100%;"></div><script src="/script/plot.js"></script>
+            <div id="8aafca0e-6284-40e7-9241-1e773171f787" class="plotly-graph-div" style="height:100%; width:100%;"></div>
+            <script src="/script/plot.js"></script>
         </div>
         <div>
-            <div id="fe1dfaa2-0042-4ddc-aac3-a5436d0c3138" class="plotly-graph-div" style="height:100%; width:100%;"></div><script src="/script/histHZ.js"></script>
+            <div id="fe1dfaa2-0042-4ddc-aac3-a5436d0c3138" class="plotly-graph-div" style="height:100%; width:100%;"></div>
+            <script src="/script/histHZ.js"></script>
         </div>
         <div>
-            <div id="84b01849-f686-4076-bc13-4897310f5baa" class="plotly-graph-div" style="height:100%; width:100%;"></div><script src="/script/choromap.js"></script>
-        </div>   
+            <div id="1d184b13-4042-48b5-8d4e-c1bd2e29de8a" class="plotly-graph-div" style="height:100%; width:100%;"></div>
+            <script src="/script/choromap.js"></script>
+        </div>
         <img src="img/kmeansclustering.png" alt="clustering" onerror="this.onerror=null;this.src='https://plotly.com/404.png';" />
     </section>
 
